--- a/.github/workflows/01-fetch.yml
+++ b/.github/workflows/01-fetch.yml
@@ -37,17 +37,14 @@ jobs:
         run: python scripts/fetch_stars.py
       
       - name: Upload stars file
-        uses: actions/upload-artifact@v3
+        if: github.event.inputs.mode == 'draft'
+        uses: actions/upload-artifact@v4
         with:
-          name: my-stars
+          name: my-stars-draft
           path: my-stars.md
-  
-  release:
-    if: inputs.mode == 'release'
-    runs-on: ubuntu-latest
-    needs: fetch-stars
-    steps:
+
       - name: Commit and push release changes
+        if: github.event.inputs.mode == 'release'
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "docs(stars): Release update of starred repositories"
