--- a/.github/workflows/01-fetch.yml
+++ b/.github/workflows/01-fetch.yml
@@ -49,6 +49,7 @@ jobs:
           GH_TOKEN: ${{ secrets.PAT }}
         run: |
           python -m pip install --upgrade pip
+          pip install -r scripts/requirements.txt
           python scripts/fetch_stars.py
 
       - name: Upload stars file
