--- a/.github/workflows/01-fetch.yml
+++ b/.github/workflows/01-fetch.yml
@@ -1,7 +1,7 @@
 name: 01 - Fetch and Analyze Stars
 
 on:
-  pull_request:
+  push:
     branches:
       - main
     paths:
@@ -29,7 +29,7 @@ jobs:
       - name: Initialize environment
         id: init-env
         run: |
-          if [ "${{ github.event_name}}" == 'pull_request' ]; then
+          if [ "${{ github.event_name}}" == 'push' ]; then
             echo "mode=draft" >> $GITHUB_OUTPUT
           elif [ "${{ github.event_name }}" == 'schedule' ]; then
             echo "mode=release" >> $GITHUB_OUTPUT
