--- a/.github/workflows/01-fetch.yml
+++ b/.github/workflows/01-fetch.yml
@@ -81,5 +81,5 @@ jobs:
     uses: ./.github/workflows/02-build.yml
     with:
       mode: ${{ needs.fetch.outputs.mode }}
-      has_changes: ${{ needs.fetch.outputs.has_changes }}
+      has_changes: ${{ fromJson(needs.fetch.outputs.has_changes) }}
     needs: fetch
