--- a/app/package.json
+++ b/app/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "my-gitstar",
+  "name": "app",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.11.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "papaparse": "^5.4.1",
-    "@astrojs/starlight": "^0.25.1",
-    "@astrojs/react": "^3.6.0",
-    "@astrojs/tailwind": "^5.1.0"
+    "@astrojs/starlight": "^0.35.2",
+    "@astrojs/starlight-tailwind": "^4.0.1",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.12.9",
+    "datatables.net-dt": "^2.3.2",
+    "jquery": "^3.7.1",
+    "tailwindcss": "^4.1.11"
   }
 }
