--- a/.github/workflows/01-fetch.yml
+++ b/.github/workflows/01-fetch.yml
@@ -80,7 +80,7 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "📚 Release update of starred repositories"
-          file_pattern: '${{env.FRONTEND_PATH}}/src/content/**/*'
+          file_pattern: '${{env.FRONTEND_PATH}}/src/content/*'
           branch: main
 
   call-build:
