--- a/.github/workflows/02-build.yml
+++ b/.github/workflows/02-build.yml
@@ -58,7 +58,7 @@ jobs:
           echo "path=${{ env.BASE_PATH }}/dist" >> $GITHUB_OUTPUT
 
       - name: Upload build artifact
-        if: ${{ github.event_name == 'push' || inputs.mode == 'draft' || (inputs.mode == 'release' && inputs.has_changes == 'false') }}
+        if: ${{ github.event_name == 'push' || inputs.mode == 'draft' || (inputs.mode == 'release' && !inputs.has_changes) }}
         uses: actions/upload-artifact@v4
         with:
           name: astro-build-draft
@@ -66,7 +66,7 @@ jobs:
           retention-days: 7
           
   deploy:
-    if: inputs.mode == 'release' && inputs.has_changes == 'true'
+    if: inputs.mode == 'release' && inputs.has_changes
     runs-on: ubuntu-latest
     needs: build
     permissions:
