--- a/.github/workflows/01-fetch.yml
+++ b/.github/workflows/01-fetch.yml
@@ -84,8 +84,9 @@ jobs:
           branch: main
 
   call-build:
+    if: ${{needs.fetch.outputs.has_changes}}
     uses: ./.github/workflows/02-build.yml
     with:
       mode: ${{ needs.fetch.outputs.mode }}
-      has_changes: ${{ needs.fetch.outputs.has_changes }}
+      has_changes: true
     needs: fetch
